# agentgrant-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml  tests.yml
agentgrant/: __init__.py  __main__.py  cli.py
agentgrant/clients/: __init__.py  api_client.py  auth_client.py  docs_client.py
agentgrant/commands/: __init__.py  _shared.py  cache.py  completion.py  config.py  docs.py  doctor.py  grant.py  identity.py  page.py  scopes.py  search.py  token.py  version.py
agentgrant/core/: __init__.py  cache_manager.py  constants.py  context.py  exceptions.py  logger.py  session.py  settings.py
agentgrant/models/: __init__.py  docs.py  grant.py  identity.py  scope.py  token.py
agentgrant/utils/: __init__.py  config.py  formatter.py  http_client.py  jwt_utils.py  parser.py  printer.py  validators.py
docs/: index.md  usage.md
examples/: docs.txt
project/: README.md  instruction.md  requirements.txt  task.toml
project/environment/: Dockerfile  audio_processor.py  config.py  database.py  game_engine.py  main.py  models.py  seed_data.py  terminal_ui.py
project/solution/: solve.sh
project/tests/: test.sh  test_outputs.py
tests/: conftest.py  test_cache_manager.py  test_cli.py  test_cli_commands.py  test_clients_and_session.py  test_commands_unit.py  test_config.py  test_core_and_utils.py  test_docs.py  test_jwt_utils.py  test_parser.py  test_settings.py  test_token.py
