[project]
name = "agentgrant"
version = "0.1.0"
description = "CLI for inspecting Grantex grants, tokens, scopes, identities, and docs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.7",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
  "pydantic>=2.8.2",
  "rich>=13.7.1",
  "PyJWT>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
agentgrant = "agentgrant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

