[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgrant-cli"
version = "0.2.0"
description = "Production-quality CLI for Grantex-style grants, scopes, identities, docs, and JWT inspection."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Avneesh Kumar Tripathi", email = "avanishtripathiavanish79921170@gmail.com" }
]
maintainers = [
  { name = "Avneesh Kumar Tripathi", email = "avanishtripathiavanish79921170@gmail.com" }
]
keywords = ["cli", "jwt", "grants", "httpx", "click", "rich"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "black>=24.4.2",
  "click>=8.1.7",
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "PyJWT>=2.9.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.1",
  "ruff>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "types-PyYAML>=6.0.12.20250516",
]

[project.scripts]
agentgrant = "agentgrant.cli:cli"

[project.urls]
Homepage = "https://github.com/AvneeshTripathi72/agentgrant-cli"
Repository = "https://github.com/AvneeshTripathi72/agentgrant-cli"
Issues = "https://github.com/AvneeshTripathi72/agentgrant-cli/issues"
Documentation = "https://github.com/AvneeshTripathi72/agentgrant-cli#readme"

[tool.hatch.build.targets.wheel]
packages = ["agentgrant"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agentgrant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=agentgrant --cov-report=term-missing"
